Wire up Swagger backend
